--- a/004_Content/header/header.html
+++ b/004_Content/header/header.html
@@ -9,7 +9,13 @@
         <div class="header">
             <ul>
                 <li><a href="#">HOME</a></li>
-                <li><a href="#">About</a></li>
+                <li>
+                    <a href="#">About</a>
+                    <div class="sub_menu">
+                        <a href="#">CEO</a>
+                        <a href="#">MAP</a>
+                    </div>
+                </li>
                 <li><a href="#">service</a></li>
                 <li><a href="#">custom</a></li>
                 <li><a href="#">board</a></li>
