--- a/004_Content/header/header.html
+++ b/004_Content/header/header.html
@@ -20,6 +20,12 @@
                 <li><a href="#">custom</a></li>
                 <li><a href="#">board</a></li>
             </ul>
+
+            <a href="#" class="menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </a>
         </div>
     </body>
 </html>
