--- a/004_Content/header/header.html
+++ b/004_Content/header/header.html
@@ -6,6 +6,44 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        
+        <div class="header">
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li>
+                    <a href="#">About</a>
+                    <div class="sub_menu">
+                        <a href="#">CEO</a>
+                        <a href="#">MAP</a>
+                    </div>
+                </li>
+                <li><a href="#">service</a></li>
+                <li><a href="#">custom</a></li>
+                <li><a href="#">board</a></li>
+            </ul>
+            <a href="#" class="menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </a>
+        </div>
+
+        <div class="header_2">
+            <div>
+                <h1>LOGO</h1>
+                <ul>
+                    <li><a href="#">service</a></li>
+                    <li><a href="#">custom</a></li>
+                    <li><a href="#">board</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="sel">
+            <a href="#">SELECT</a>
+            <ul>
+                <li><a href="#">naver.com</a></li>
+                <li><a href="#">google.com</a></li>
+                <li><a href="#">kakao.com</a></li>
+            </ul>
+        </div>
     </body>
 </html>
