--- a/005_Content02/content02.html
+++ b/005_Content02/content02.html
@@ -9,16 +9,29 @@
         <section>
             <content>
                 <h1>Right Line</h1>
-                <p>The line broken, bent and bonded in space,<br>creates three-dimensional forms.</P>
-                <p>This very simple statement on geometry<br> and technique is one of Agata Bieleń’s<br> elemental design principles. principles.<br> principles. principles.</p>
-                <aside>
-                    <span>01</span>
-                    <span>02</span>
-                    <span>03</span>
-                    <span>04</span>
-                </aside>
+                <p>
+                    The line broken, bent and bonded in space, creates<br />
+                    three-dimensional forms.<br /><br />
+
+                    This very simple statement on geometry and<br />
+                    technique is one of Agata Bieleń’s elemental design<br />
+                    principles. principles. principles. principles.
+                </p>
             </content>
-            
+            <ul>
+                <li>
+                    <a href="">01</a>
+                    <div class="img"></div>
+                </li>
+                <li>
+                    <a>02</a>
+                    <div class="img"></div>
+                </li>
+                <li>
+                    <a>03</a>
+                    <div class="img"></div>
+                </li>
+            </ul>
         </section>
     </body>
 </html>
