컨텐츠 코딩 및 애니메이션 수정

--- a/006_html5_1step/index.html
+++ b/006_html5_1step/index.html
@@ -1,43 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>Document</title>
+        <link href="css/style.css" rel="stylesheet" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <link href="css/style.css" rel="stylesheet"> </head>
-
-<body>
-    <header>
-        <nav> <a href="#">HOME</a> <a href="#">CEO</a> <a href="#">SERVICE</a> <a href="#">Contact us</a> </nav>
-    </header>
-    <section id="container">
-        <!--본문 내용-->
-        <article>
-            <h2>리스트</h2>
+    <body>
+        <header>
+            <a href=""><img src="img/logo.png" alt="logo"/></a>
+            <nav>
+                <a href="">HOME</a>
+                <a href="">ABOUT</a>
+                <a href="">CONTACT</a>
+            </nav>
+        </header>
+        <div class="visual">
+            <h1>UI/UX & Graphic Designer</h1>
+            <p>
+                I am a Graphic & Web Designer based in New York, specializing<br />
+                in User Interface Design and Development.
+            </p>
+        </div>
+        <section>
             <ul>
-                <li>
-                    <figure> <img src="img/photo01.jpg">
-                        <figcaption> 이미지 소개글 </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure> <img src="img/photo01.jpg">
-                        <figcaption> 이미지 소개글 </figcaption>
-                    </figure>
-                </li>
-                <li>
-                    <figure> <img src="img/photo01.jpg">
-                        <figcaption> 이미지 소개글 </figcaption>
-                    </figure>
-                </li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
             </ul>
-        </article>
-    </section>
-    <footer>
-        <nav> <a href="#">회사소개</a> <a href="#">개인정보취급방침</a> </nav>
-        <p>Copyright@2020</p>
-    </footer>
-    <aside> 사이트 콘텐츠(퀵메뉴,사이드배너,top,인디게이터) </aside>
-</body>
-
+        </section>
+        <footer>
+            <div class="inc">
+                <h3>Piroll Design, Inc.</h3>
+                <p>
+                    © 2017 Piroll. All rights reserved.<br />
+                    Designed by robirurk.
+                </p>
+            </div>
+            <div class="eme">
+                <p>hello@pirolltheme.com</p>
+                <p>+44 987 065 908</p>
+            </div>
+            <ul>
+                <li><a href="">Projects</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Carreer</a></li>
+            </ul>
+            <ul>
+                <li><a href="">News</a></li>
+                <li><a href="">Events</a></li>
+                <li><a href="">Contace</a></li>
+                <li><a href="">Legals</a></li>
+            </ul>
+            <ul>
+                <li><a href="">Facebook</a></li>
+                <li><a href="">Twitter</a></li>
+                <li><a href="">Instagram</a></li>
+                <li><a href="">Dribbble</a></li>
+            </ul>
+        </footer>
+    </body>
 </html>
