이미지 수정

--- a/006_html5_1step/index.html
+++ b/006_html5_1step/index.html
@@ -24,7 +24,7 @@
         </div>
         <section>
             <ul>
-                <li></li>
+                <li><img src="img/photo01.jpg" alt="" /></li>
                 <li></li>
                 <li></li>
                 <li></li>
