--- a/005_Content02/content02.html
+++ b/005_Content02/content02.html
@@ -24,11 +24,11 @@
                     <div class="img"></div>
                 </li>
                 <li>
-                    <a>02</a>
+                    <a href="">02</a>
                     <div class="img"></div>
                 </li>
                 <li>
-                    <a>03</a>
+                    <a href="">03</a>
                     <div class="img"></div>
                 </li>
             </ul>
