--- a/005_Content02/content02.html
+++ b/005_Content02/content02.html
@@ -6,32 +6,26 @@
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
-        <section>
-            <content>
-                <h1>Right Line</h1>
-                <p>
-                    The line broken, bent and bonded in space, creates<br />
-                    three-dimensional forms.<br /><br />
-
-                    This very simple statement on geometry and<br />
-                    technique is one of Agata Bieleń’s elemental design<br />
-                    principles. principles. principles. principles.
-                </p>
-            </content>
-            <ul>
-                <li>
-                    <a href="">01</a>
-                    <div class="img"></div>
-                </li>
-                <li>
-                    <a href="">02</a>
-                    <div class="img"></div>
-                </li>
-                <li>
-                    <a href="">03</a>
-                    <div class="img"></div>
-                </li>
-            </ul>
-        </section>
+        <main>
+            <section>
+                <article>
+                    <h1>Right Line</h1>
+                    <p>
+                        The line broken, bent and bonded in space, creates three-dimensional forms.<br /><br />
+                        This very simple statement on geometry and technique is one of Agata Bieleń’s elemental design principles. principles. principles. principles.
+                    </p>
+                </article>
+                <img src="img/img01.png" alt="img" />
+            </section>
+            <nav>
+                <ul>
+                    <li><a href="#">01</a></li>
+                    <span class="line"></span>
+                    <li><a href="#">02</a></li>
+                    <li><a href="#">03</a></li>
+                    <li><a href="#">04</a></li>
+                </ul>
+            </nav>
+        </main>
     </body>
 </html>
