--- a/005_Content02/content02.html
+++ b/005_Content02/content02.html
@@ -12,7 +12,8 @@
                     <h1>Right Line</h1>
                     <p>
                         The line broken, bent and bonded in space, creates three-dimensional forms.<br /><br />
-                        This very simple statement on geometry and technique is one of Agata Bieleń’s elemental design principles. principles. principles. principles.
+                        This very simple statement on geometry and technique is one of Agata Bieleń’s elemental design principles. principles.
+                        principles. principles.
                     </p>
                 </article>
                 <img src="img/img01.png" alt="img" />
