--- a/007_all_spot/index.html
+++ b/007_all_spot/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>Document</title>
         <link href="css/style.css" rel="stylesheet" />
+        <script src="https://kit.fontawesome.com/60a06f6dc3.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -29,9 +30,9 @@
                 <h2>
                     SUMMER TRENDS
                     <span class="sns">
-                        <a href=""><img src="img/sns01.png" alt=""/></a>
-                        <a href=""><img src="img/sns02.png" alt=""/></a>
-                        <a href=""><img src="img/sns03.png" alt=""/></a>
+                        <a href=""><i class="fab fa-facebook"></i></a>
+                        <a href=""><i class="fab fa-instagram"></i></a>
+                        <a href=""><i class="fab fa-twitter"></i></a>
                     </span>
                 </h2>
 
