애니메이션 수정

--- a/008_all_site2/index.html
+++ b/008_all_site2/index.html
@@ -22,7 +22,7 @@
             </header>
             <section>
                 <div class="visual">
-                    <img src="img/img_visual.jpg" alt="" />
+                    <div class="img_box"><img src="img/img_visual.jpg" alt="" /></div>
                     <p>
                         <span>FREE</span><br />
                         <span>TEMPLATE</span>
