애니메이션 수정

--- a/008_all_site2/index.html
+++ b/008_all_site2/index.html
@@ -47,6 +47,20 @@
                             <span><code>07</code>/<code>08</code></span>
                         </figure>
                     </li>
+                    <li>
+                        <article>
+                            <h2>
+                                Hinc nobis<br />
+                                duo ut
+                            </h2>
+                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur</p>
+                            <p><a href="">read more...</a></p>
+                        </article>
+                        <figure>
+                            <img src="img/img_sub.jpg" alt="" />
+                            <span><code>07</code>/<code>08</code></span>
+                        </figure>
+                    </li>
                 </ul>
             </section>
             <footer>
