--- a/1001_Site_Renewal/리뉴얼/html/main/index.html
+++ b/1001_Site_Renewal/리뉴얼/html/main/index.html
@@ -158,6 +158,16 @@
                         </li>
                     </ul>
                 </div>
+                <div class="photo">
+                    <h2>청사초롱</h2>
+                    <span></span>
+                    <div class="photo_box">
+                        <div class="photo_left">
+                            <p><img src="img/img_content01.jpg" alt="" /></p>
+                        </div>
+                        <div class="photo_right"></div>
+                    </div>
+                </div>
             </section>
         </div>
     </body>
