메인페이지 코딩

--- a/1001_Site_Renewal/리뉴얼/html/main/index.html
+++ b/1001_Site_Renewal/리뉴얼/html/main/index.html
@@ -13,13 +13,37 @@
             <div class="header_box">
                 <a href="#"><img src="img/img_logo.png" alt=""/></a>
                 <nav>
-                    <ul>
+                    <ul class="header_1depth">
                         <li><a href="">정보공개</a></li>
                         <li><a href="">국민참여</a></li>
                         <li><a href="">사업</a></li>
                         <li><a href="">알림</a></li>
                         <li><a href="">공사</a></li>
                     </ul>
+                    <div class="header_2depth">
+                        <div class="menu">
+                            <ul>
+                                <li><a href="">정보공개창구</a></li>
+                                <li><a href="">공공데이터개방</a></li>
+                                <li><a href="">부채내용</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="">문의하기</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="">사업지원</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="">관광시장정보</a></li>
+                                <li><a href="">소식</a></li>
+                                <li><a href="">갤러리</a></li>
+                            </ul>
+                            <ul>
+                                <li><a href="">조직안내</a></li>
+                                <li><a href="">시설안내</a></li>
+                            </ul>
+                        </div>
+                    </div>
                 </nav>
                 <div class="login">
                     <a href="">로그인</a>
