애니메이션 수정

--- a/1001_Site_Renewal/리뉴얼/html/main/index.html
+++ b/1001_Site_Renewal/리뉴얼/html/main/index.html
@@ -56,7 +56,7 @@
             </div>
         </header>
         <div class="content">
-            <div class="visual">
+            <div class="visual" id="visual">
                 <a href="#" class="left"><img src="img/icon_left.png" alt=""/></a>
                 <p>
                     관광을 <span>미래</span> 성장동력으로,<br />
@@ -235,21 +235,29 @@
                 </div>
             </div>
             <div class="information">
-                <div class="inf_box">
+                <a href="" class="inf_box">
                     <p>관광 안내</p>
                     <div class="text_box">
                         <p>관광안내책자를 구하고 싶습니다.</p>
                         <p>공사에서 제작하는 관광달력을 받고 싶습니다.</p>
                     </div>
-                </div>
-                <div class="inf_box">
+                    <div class="inf_hover">
+                        <p>관광 안내</p>
+                        <p><img src="img/icon_bottom_01.png" alt="" /></p>
+                    </div>
+                </a>
+                <a href="" class="inf_box">
                     <p>채용 정보</p>
                     <div class="text_box">
                         <p>각 부서가 어떤 일들을 하는지 알고 싶습니다.</p>
                         <p>해외지사 근무자는 따로 채용하나요?</p>
                     </div>
-                </div>
-                <div class="inf_box">
+                    <div class="inf_hover">
+                        <p>채용 정보</p>
+                        <p><img src="img/icon_bottom_02.png" alt="" /></p>
+                    </div>
+                </a>
+                <a href="" class="inf_box">
                     <p>국내 여행</p>
                     <div class="text_box">
                         <p>
@@ -258,8 +266,12 @@
                         </p>
                         <p>국내 한류 관광지에 대한 정보를 얻고 싶습니다.</p>
                     </div>
-                </div>
-                <div class="inf_box">
+                    <div class="inf_hover">
+                        <p>국내 여행</p>
+                        <p><img src="img/icon_bottom_03.png" alt="" /></p>
+                    </div>
+                </a>
+                <a href="" class="inf_box">
                     <p>국외 여행</p>
                     <div class="text_box">
                         <p>국민해외여행센터에서는 어떤 일을 하나요?</p>
@@ -268,7 +280,11 @@
                             확인하고 싶습니다.
                         </p>
                     </div>
-                </div>
+                    <div class="inf_hover">
+                        <p>국외 여행</p>
+                        <p><img src="img/icon_bottom_04.png" alt="" /></p>
+                    </div>
+                </a>
             </div>
         </div>
         <footer>
@@ -304,5 +320,10 @@
                 </div>
             </div>
         </footer>
+        <aside>
+            <a href="#visual">
+                <img src="img/icon_top.png" alt="" />
+            </a>
+        </aside>
     </body>
 </html>
