--- a/010_html5_site3(bootstrap)/index.html
+++ b/010_html5_site3(bootstrap)/index.html
@@ -11,10 +11,50 @@
     </head>
     <body>
         <div class="wrap">
-            <header class="col-md-2"></header>
-            <section class="col-md-10">
-                <div class="row">
-                    <figure class="col-md-3">
+            <header class="row">
+                <div class="hea_top">
+                    <div class="hea_top_logo">
+                        <p>kappe</p>
+                        <p><img src="img/logo.png" alt="" /></p>
+                    </div>
+                </div>
+                <nav>
+                    <ul class="hea_menu">
+                        <li><a href="">Home</a></li>
+                        <li><a href="">Work</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Services</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </nav>
+                <div class="hea_bottom">
+                    <div class="hea_text">
+                        <h3><span>Filter</span><i class="fab fa-windows"></i></h3>
+                        <ul>
+                            <li><a href="">All Works</a></li>
+                            <li><a href="">web design</a></li>
+                            <li><a href="">illustration</a></li>
+                            <li><a href="">photography</a></li>
+                            <li><a href="">wallpapers</a></li>
+                            <li><a href="">brochures</a></li>
+                        </ul>
+                    </div>
+                    <div class="hea_sns">
+                        <a href=""><img src="img/sns01.png" alt=""/></a>
+                        <a href=""><img src="img/sns02.png" alt=""/></a>
+                        <a href=""><img src="img/sns03.png" alt=""/></a>
+                        <a href=""><img src="img/sns04.png" alt=""/></a>
+                        <a href=""><img src="img/sns05.png" alt=""/></a>
+                        <a href=""><img src="img/sns06.png" alt=""/></a>
+                        <a href=""><img src="img/sns07.png" alt=""/></a>
+                    </div>
+                    <p>© 2019 Kappe, All Rights Reserved</p>
+                </div>
+            </header>
+            <section>
+                <div class="row thum">
+                    <figure class="col-md-3 col-sm-6 col-xs-12">
                         <img src="img/img01.jpg" alt="" />
                         <div class="hover_box">
                             <p>Cool App Design</p>
@@ -23,25 +63,156 @@
                             <a href="#"><i class="fas fa-arrow-right"></i></a>
                         </div>
                     </figure>
-                    <figure class="col-md-3"><img src="img/img02.jpg" alt="" /></figure>
-                    <figure class="col-md-3"><img src="img/img03.jpg" alt="" /></figure>
-                    <figure class="col-md-3"><img src="img/img04.jpg" alt="" /></figure>
-                    <figure class="col-md-3"><img src="img/img05.jpg" alt="" /></figure>
-                    <figure class="col-md-3"><img src="img/img06.jpg" alt="" /></figure>
-                    <figure class="col-md-3"><img src="img/img07.jpg" alt="" /></figure>
-                    <figure class="col-md-3"><img src="img/img08.jpg" alt="" /></figure>
-                    <figure class="col-md-3"><img src="img/img09.jpg" alt="" /></figure>
-                    <figure class="col-md-3"><img src="img/img10.jpg" alt="" /></figure>
-                    <figure class="col-md-3"><img src="img/img11.jpg" alt="" /></figure>
-                    <figure class="col-md-3"><img src="img/img12.jpg" alt="" /></figure>
-                    <figure class="col-md-3"><img src="img/img13.jpg" alt="" /></figure>
-                    <figure class="col-md-3"><img src="img/img14.jpg" alt="" /></figure>
-                    <figure class="col-md-3"><img src="img/img15.jpg" alt="" /></figure>
-                    <figure class="col-md-3"><img src="img/img16.jpg" alt="" /></figure>
+                    <figure class="col-md-3 col-sm-6 col-xs-12">
+                        <img src="img/img02.jpg" alt="" />
+                        <div class="hover_box">
+                            <p>Cool App Design</p>
+                            <p>development, mobile</p>
+                            <span></span>
+                            <a href="#"><i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </figure>
+                    <figure class="col-md-3 col-sm-6 col-xs-12">
+                        <img src="img/img03.jpg" alt="" />
+                        <div class="hover_box">
+                            <p>Cool App Design</p>
+                            <p>development, mobile</p>
+                            <span></span>
+                            <a href="#"><i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </figure>
+                    <figure class="col-md-3 col-sm-6 col-xs-12">
+                        <img src="img/img04.jpg" alt="" />
+                        <div class="hover_box">
+                            <p>Cool App Design</p>
+                            <p>development, mobile</p>
+                            <span></span>
+                            <a href="#"><i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </figure>
+                    <figure class="col-md-3 col-sm-6 col-xs-12">
+                        <img src="img/img05.jpg" alt="" />
+                        <div class="hover_box">
+                            <p>Cool App Design</p>
+                            <p>development, mobile</p>
+                            <span></span>
+                            <a href="#"><i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </figure>
+                    <figure class="col-md-3 col-sm-6 col-xs-12">
+                        <img src="img/img06.jpg" alt="" />
+                        <div class="hover_box">
+                            <p>Cool App Design</p>
+                            <p>development, mobile</p>
+                            <span></span>
+                            <a href="#"><i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </figure>
+                    <figure class="col-md-3 col-sm-6 col-xs-12">
+                        <img src="img/img07.jpg" alt="" />
+                        <div class="hover_box">
+                            <p>Cool App Design</p>
+                            <p>development, mobile</p>
+                            <span></span>
+                            <a href="#"><i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </figure>
+                    <figure class="col-md-3 col-sm-6 col-xs-12">
+                        <img src="img/img08.jpg" alt="" />
+                        <div class="hover_box">
+                            <p>Cool App Design</p>
+                            <p>development, mobile</p>
+                            <span></span>
+                            <a href="#"><i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </figure>
+                    <figure class="col-md-3 col-sm-6 col-xs-12">
+                        <img src="img/img09.jpg" alt="" />
+                        <div class="hover_box">
+                            <p>Cool App Design</p>
+                            <p>development, mobile</p>
+                            <span></span>
+                            <a href="#"><i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </figure>
+                    <figure class="col-md-3 col-sm-6 col-xs-12">
+                        <img src="img/img10.jpg" alt="" />
+                        <div class="hover_box">
+                            <p>Cool App Design</p>
+                            <p>development, mobile</p>
+                            <span></span>
+                            <a href="#"><i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </figure>
+                    <figure class="col-md-3 col-sm-6 col-xs-12">
+                        <img src="img/img11.jpg" alt="" />
+                        <div class="hover_box">
+                            <p>Cool App Design</p>
+                            <p>development, mobile</p>
+                            <span></span>
+                            <a href="#"><i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </figure>
+                    <figure class="col-md-3 col-sm-6 col-xs-12">
+                        <img src="img/img12.jpg" alt="" />
+                        <div class="hover_box">
+                            <p>Cool App Design</p>
+                            <p>development, mobile</p>
+                            <span></span>
+                            <a href="#"><i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </figure>
+                    <figure class="col-md-3 col-sm-6 col-xs-12">
+                        <img src="img/img13.jpg" alt="" />
+                        <div class="hover_box">
+                            <p>Cool App Design</p>
+                            <p>development, mobile</p>
+                            <span></span>
+                            <a href="#"><i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </figure>
+                    <figure class="col-md-3 col-sm-6 col-xs-12">
+                        <img src="img/img14.jpg" alt="" />
+                        <div class="hover_box">
+                            <p>Cool App Design</p>
+                            <p>development, mobile</p>
+                            <span></span>
+                            <a href="#"><i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </figure>
+                    <figure class="col-md-3 col-sm-6 col-xs-12">
+                        <img src="img/img15.jpg" alt="" />
+                        <div class="hover_box">
+                            <p>Cool App Design</p>
+                            <p>development, mobile</p>
+                            <span></span>
+                            <a href="#"><i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </figure>
+                    <figure class="col-md-3 col-sm-6 col-xs-12">
+                        <img src="img/img16.jpg" alt="" />
+                        <div class="hover_box">
+                            <p>Cool App Design</p>
+                            <p>development, mobile</p>
+                            <span></span>
+                            <a href="#"><i class="fas fa-arrow-right"></i></a>
+                        </div>
+                    </figure>
                 </div>
             </section>
+            <aside>
+                <div class="inf">
+                    <div class="inf_box">
+                        <a href=""><i class="fas fa-info-circle"></i></a>
+                    </div>
+                    <div class="inf_text">
+                        <p><i class="fas fa-phone-alt"></i>9930 1234 5679</p>
+                        <p><i class="fas fa-envelope"></i>contact@domain.com</p>
+                        <p><i class="fas fa-home"></i>street address example</p>
+                    </div>
+                </div>
+            </aside>
         </div>
     </body>
-
     <script src="https://kit.fontawesome.com/71dbb0a759.js" crossorigin="anonymous"></script>
 </html>
