--- a/010_html5_site3(bootstrap)/index.html
+++ b/010_html5_site3(bootstrap)/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="wrap">
-            <header class="row">
+            <header>
                 <div class="hea_top">
                     <div class="hea_top_logo">
                         <p>kappe</p>
@@ -53,7 +53,7 @@
                 </div>
             </header>
             <section>
-                <div class="row thum">
+                <div class="row">
                     <figure class="col-md-3 col-sm-6 col-xs-12">
                         <img src="img/img01.jpg" alt="" />
                         <div class="hover_box">
