--- a/1001_Site_Renewal/리뉴얼/html/sub_01/index.html
+++ b/1001_Site_Renewal/리뉴얼/html/sub_01/index.html
@@ -102,14 +102,20 @@
                                 <a href="">모든국민</a>
                                 <div class="text">
                                     <p><img src="img/sub/icon_sub03.png" alt="" /></p>
-                                    <p>모든 국민은 청구인 본인 또는 그 대리인을 통하여 공공기관에 정보공개를 청구할 권리를 가지고 있습니다.</p>
+                                    <p>
+                                        모든 국민은 청구인 본인 또는 그 대리인을 통하여 공공기관에<br />
+                                        정보공개를 청구할 권리를 가지고 있습니다.
+                                    </p>
                                 </div>
                             </li>
                             <li>
                                 <a href="">법인단체</a>
                                 <div class="text">
                                     <p><img src="img/sub/icon_sub04.png" alt="" /></p>
-                                    <p>법인과 단체의 경우는 대표자의 명의로 공공기관에 정보공개를 청구할 권리를 가지고 있습니다.</p>
+                                    <p>
+                                        법인과 단체의 경우는 대표자의 명의로 공공기관에<br />
+                                        정보공개를 청구할 권리를 가지고 있습니다.
+                                    </p>
                                 </div>
                             </li>
                             <li>
@@ -134,6 +140,46 @@
                     <li><a href="#con_02">공공데이터 개방</a></li>
                     <li><a href="#con_03">부채 내용</a></li>
                 </ul>
+                <div class="main">
+                    <ul>
+                        <li>
+                            <a href="">
+                                <p><img src="img/sub/icon_sub06.png" alt="" /></p>
+                                <p>국내 유일의 다국어 관광정보 9종 제공</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <p><img src="img/sub/icon_sub07.png" alt="" /></p>
+                                <p>70여만 건의 관광정보 실시간 제공</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <p><img src="img/sub/icon_sub08.png" alt="" /></p>
+                                <p>다양한 어플리케이션 개발 및 활용</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <p><img src="img/sub/icon_sub09.png" alt="" /></p>
+                                <p>쉽게 활용할 수 있는 관광정보 제공</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <p><img src="img/sub/icon_sub10.png" alt="" /></p>
+                                <p>원하는 형태로 관광정보 다운로드 제공</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <p><img src="img/sub/icon_sub11.png" alt="" /></p>
+                                <p>API 다운로드</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="con con_03" id="con_03">
                 <div class="top">부채 내용</div>
