--- a/1001_Site_Renewal/리뉴얼/html/sub_01/index.html
+++ b/1001_Site_Renewal/리뉴얼/html/sub_01/index.html
@@ -143,40 +143,32 @@
                 <div class="main">
                     <ul>
                         <li>
-                            <a href="">
-                                <p><img src="img/sub/icon_sub06.png" alt="" /></p>
-                                <p>국내 유일의 다국어 관광정보 9종 제공</p>
-                            </a>
+                            <p><img src="img/sub/icon_sub06.png" alt="" /></p>
+                            <p>국내 유일의 다국어 관광정보 9종 제공</p>
                         </li>
                         <li>
-                            <a href="">
-                                <p><img src="img/sub/icon_sub07.png" alt="" /></p>
-                                <p>70여만 건의 관광정보 실시간 제공</p>
-                            </a>
+                            <p><img src="img/sub/icon_sub07.png" alt="" /></p>
+                            <p>70여만 건의 관광정보 실시간 제공</p>
                         </li>
                         <li>
-                            <a href="">
-                                <p><img src="img/sub/icon_sub08.png" alt="" /></p>
-                                <p>다양한 어플리케이션 개발 및 활용</p>
-                            </a>
+                            <p><img src="img/sub/icon_sub08.png" alt="" /></p>
+                            <p>다양한 어플리케이션 개발 및 활용</p>
                         </li>
                         <li>
-                            <a href="">
-                                <p><img src="img/sub/icon_sub09.png" alt="" /></p>
-                                <p>쉽게 활용할 수 있는 관광정보 제공</p>
-                            </a>
+                            <p><img src="img/sub/icon_sub09.png" alt="" /></p>
+                            <p>쉽게 활용할 수 있는 관광정보 제공</p>
                         </li>
                         <li>
-                            <a href="">
-                                <p><img src="img/sub/icon_sub10.png" alt="" /></p>
-                                <p>원하는 형태로 관광정보 다운로드 제공</p>
-                            </a>
+                            <p><img src="img/sub/icon_sub10.png" alt="" /></p>
+                            <p>원하는 형태로 관광정보 다운로드 제공</p>
                         </li>
                         <li>
-                            <a href="">
-                                <p><img src="img/sub/icon_sub11.png" alt="" /></p>
-                                <p>API 다운로드</p>
-                            </a>
+                            <p><img src="img/sub/icon_sub11.png" alt="" /></p>
+                            <p>API 다운로드</p>
+                            <div>
+                                <p>TourAPI <span>3.0</span></p>
+                                <a href="">바로가기</a>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -188,6 +180,144 @@
                     <li><a href="#con_02">공공데이터 개방</a></li>
                     <li><a href="#con_03">부채 내용</a></li>
                 </ul>
+                <div class="main">
+                    <ul>
+                        <li>
+                            <p>자산 규모</p>
+                            <div class="graph">
+                                <ul>
+                                    <li>
+                                        <p>2018년</p>
+                                        <div>
+                                            <p>
+                                                <span>1,428,647(백만원)</span>
+                                            </p>
+                                            <p><span></span></p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <p>2017년</p>
+                                        <div>
+                                            <p>
+                                                <span>1,402,083(백만원)</span>
+                                            </p>
+                                            <p><span></span></p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <p>2016년</p>
+                                        <div>
+                                            <p>
+                                                <span>1,402,083(백만원)</span>
+                                            </p>
+                                            <p><span></span></p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <p>2015년</p>
+                                        <div>
+                                            <p>
+                                                <span>1,345,327(백만원)</span>
+                                            </p>
+                                            <p><span></span></p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <p>부채 규모</p>
+                            <div class="graph">
+                                <ul>
+                                    <li>
+                                        <p>2018년</p>
+                                        <div>
+                                            <p>
+                                                <span>371,116(백만원)</span>
+                                            </p>
+                                            <p><span></span></p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <p>2017년</p>
+                                        <div>
+                                            <p>
+                                                <span>359,898(백만원)</span>
+                                            </p>
+                                            <p><span></span></p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <p>2016년</p>
+                                        <div>
+                                            <p>
+                                                <span>368,230(백만원)</span>
+                                            </p>
+                                            <p><span></span></p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <p>2015년</p>
+                                        <div>
+                                            <p>
+                                                <span>365,048(백만원)</span>
+                                            </p>
+                                            <p><span></span></p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <p>자본 규모</p>
+                            <div class="graph">
+                                <ul>
+                                    <li>
+                                        <p>2018년</p>
+                                        <div>
+                                            <p>
+                                                <span>1,057,558(백만원)</span>
+                                            </p>
+                                            <p><span></span></p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <p>2017년</p>
+                                        <div>
+                                            <p>
+                                                <span>1,042,185(백만원)</span>
+                                            </p>
+                                            <p><span></span></p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <p>2016년</p>
+                                        <div>
+                                            <p>
+                                                <span>1,018,271 (백만원)</span>
+                                            </p>
+                                            <p><span></span></p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <p>2015년</p>
+                                        <div>
+                                            <p>
+                                                <span>980,279(백만원)</span>
+                                            </p>
+                                            <p><span></span></p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                    <div>
+                        <a href=""><span></span></a>
+                        <a href=""><span></span></a>
+                        <a href=""><span></span></a>
+                    </div>
+                </div>
             </div>
         </div>
         <footer>
