--- a/1001_Site_Renewal/리뉴얼/html/sub_02/index.html
+++ b/1001_Site_Renewal/리뉴얼/html/sub_02/index.html
@@ -63,21 +63,7 @@
             </div>
         </header>
         <div class="content">
-            <p class="title">문의하기</p>
-            <ul>
-                <li>
-                    <img src="img/sub/icon_sub12.png" alt="" />
-                    <p>똑똑한 문의</p>
-                </li>
-                <li>
-                    <img src="img/sub/icon_sub13.png" alt="" />
-                    <p>똑똑한 제안</p>
-                </li>
-                <li>
-                    <img src="img/sub/icon_sub14.png" alt="" />
-                    <p>관광불편 신고센터</p>
-                </li>
-            </ul>
+            
         </div>
         <footer>
             <div class="foo_top">
@@ -98,6 +84,13 @@
                             <p>관련사이트</p>
                             <img src="img/icon_plus_white.png" alt="" />
                         </a>
+                        <div>
+                            <a href="">대한민국 구석구석</a>
+                            <a href="">K-MICE</a>
+                            <a href="">걷기 여행길</a>
+                            <a href="">Go Camping</a>
+                            <a href="">한국 크루즈 관광</a>
+                        </div>
                     </div>
                 </div>
             </div>
