--- a/1001_Site_Renewal/리뉴얼/html/sub_02/index.html
+++ b/1001_Site_Renewal/리뉴얼/html/sub_02/index.html
@@ -62,9 +62,7 @@
                 </div>
             </div>
         </header>
-        <div class="content">
-            
-        </div>
+        <div class="content"></div>
         <footer>
             <div class="foo_top">
                 <div class="foo_all">
