--- a/1001_Site_Renewal/리뉴얼/html/main/index.html
+++ b/1001_Site_Renewal/리뉴얼/html/main/index.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <title>Document</title>
-
         <link rel="stylesheet" href="css/style.css" />
+        <script src="https://kit.fontawesome.com/60a06f6dc3.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
@@ -64,12 +64,19 @@
         </header>
         <div class="content">
             <div class="visual" id="visual">
-                <a href="#" class="left"><img src="img/icon_left.png" alt=""/></a>
+                <div class="img">
+                    <img src="img/img_visual01.jpg" alt="" />
+                    <img src="img/img_visual02.jpg" alt="" />
+                    <img src="img/img_visual03.jpg" alt="" />
+                </div>
                 <p>
                     관광을 <span>미래</span> 성장동력으로,<br />
                     국민의 밝은 <span>행복</span>에 기여합니다.
                 </p>
-                <a href="#" class="right"><img src="img/icon_right.png" alt=""/></a>
+                <div class="arrow">
+                    <a href=""><i class="fas fa-chevron-left"></i></a>
+                    <a href=""><i class="fas fa-chevron-right"></i></a>
+                </div>
             </div>
             <section>
                 <div class="button">
@@ -311,8 +318,16 @@
                     <div class="foo_right">
                         <a href="">
                             <p>관련사이트</p>
-                            <img src="img/icon_plus_white.png" alt="" />
+                            <img src="img/icon_plus_white.png" />
                         </a>
+                        <ul>
+                            <li><a href="">대한민국구석구석</a></li>
+                            <li><a href="">K-MICE</a></li>
+                            <li><a href="">걷기 여행길</a></li>
+                            <li><a href="">Go Camping</a></li>
+                            <li><a href="">한국 크루즈 관광 </a></li>
+                            <li><a href="">TourAPI 3.0</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
