사이트 리뉴얼

--- a/011_javascript/scale.html
+++ b/011_javascript/scale.html
@@ -7,14 +7,10 @@
     </head>
     <body>
         <script>
-            document.write("<h1>산술연산자</h1>");
-            var x = 10;
-            var y = 30;
-            var z = x + y;
+            var kor = 80,
+                eng = 70;
 
-            document.write("x + y = " + z);
-            document.write("<br> (x+y) / 2 = " + z / 2);
-            document.write("<br> (x+y) * 2 = " + z * 2);
+            document.write("홍길동님의 총점:" + kor + " / " + "평균:" + eng + "점");
         </script>
     </body>
 </html>
