--- a/1001_Site_Renewal/리뉴얼/html/sub_01.html
+++ b/1001_Site_Renewal/리뉴얼/html/sub_01.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="header_box">
-                <a href="../main/index.html"><img src="../img/logo.png" alt="한국관광공사"/></a>
+                <a href="index.html"><img src="../img/logo.png" alt="한국관광공사"/></a>
                 <nav>
                     <ul class="header_1depth">
                         <li>
@@ -61,18 +61,20 @@
                 </div>
             </div>
         </header>
+        <div class="title_box">
+            <div class="top" id="title">정보공개제도 안내</div>
+            <ul>
+                <li><a href="#con_01" id="con_01">정보공개제도 안내</a></li>
+                <li><a href="#con_02" id="con_02">공공데이터 개방</a></li>
+                <li><a href="#con_03" id="con_03">부채 내용</a></li>
+            </ul>
+        </div>
         <div class="content">
             <div class="con con_01" id="con_01">
-                <div class="top">정보공개제도 안내</div>
-                <ul>
-                    <li><a href="#con_01">정보공개제도 안내</a></li>
-                    <li><a href="#con_02">공공데이터 개방</a></li>
-                    <li><a href="#con_03">부채 내용</a></li>
-                </ul>
                 <div class="main">
                     <div class="main_top">
                         <div>
-                            <span><img src="img/sub/icon_sub01.png" alt=""/></span>
+                            <span><img src="../img/sub/icon_sub01.png" alt=""/></span>
                             <div class="text">
                                 <p>정보공개제도란?</p>
                                 <p>
@@ -84,7 +86,7 @@
                             </div>
                         </div>
                         <div>
-                            <span><img src="img/sub/icon_sub02.png" alt=""/></span>
+                            <span><img src="../img/sub/icon_sub02.png" alt=""/></span>
                             <div class="text">
                                 <p>대상정보</p>
                                 <p>
@@ -100,7 +102,7 @@
                             <li>
                                 <a href="">모든국민</a>
                                 <div class="text">
-                                    <p><img src="img/sub/icon_sub03.png" alt="" /></p>
+                                    <p><img src="../img/sub/icon_sub03.png" alt="" /></p>
                                     <p>
                                         모든 국민은 청구인 본인 또는 그 대리인을 통하여 공공기관에<br />
                                         정보공개를 청구할 권리를 가지고 있습니다.
@@ -110,7 +112,7 @@
                             <li>
                                 <a href="">법인단체</a>
                                 <div class="text">
-                                    <p><img src="img/sub/icon_sub04.png" alt="" /></p>
+                                    <p><img src="../img/sub/icon_sub04.png" alt="" /></p>
                                     <p>
                                         법인과 단체의 경우는 대표자의 명의로 공공기관에<br />
                                         정보공개를 청구할 권리를 가지고 있습니다.
@@ -120,7 +122,7 @@
                             <li>
                                 <a href="">외국인</a>
                                 <div class="text">
-                                    <p><img src="img/sub/icon_sub05.png" alt="" /></p>
+                                    <p><img src="../img/sub/icon_sub05.png" alt="" /></p>
                                     <p>
                                         - 국내에 일정한 주소를 두고 거주하는 자<br />
                                         - 학술ㆍ연구를 위하여 일시적으로 체류하는 자<br />
@@ -133,36 +135,30 @@
                 </div>
             </div>
             <div class="con con_02" id="con_02">
-                <div class="top">공공데이터 개방</div>
-                <ul>
-                    <li><a href="#con_01">정보공개제도 안내</a></li>
-                    <li><a href="#con_02">공공데이터 개방</a></li>
-                    <li><a href="#con_03">부채 내용</a></li>
-                </ul>
                 <div class="main">
                     <ul>
                         <li>
-                            <p><img src="img/sub/icon_sub06.png" alt="" /></p>
+                            <p><img src="../img/sub/icon_sub06.png" alt="" /></p>
                             <p>국내 유일의 다국어 관광정보 9종 제공</p>
                         </li>
                         <li>
-                            <p><img src="img/sub/icon_sub07.png" alt="" /></p>
+                            <p><img src="../img/sub/icon_sub07.png" alt="" /></p>
                             <p>70여만 건의 관광정보 실시간 제공</p>
                         </li>
                         <li>
-                            <p><img src="img/sub/icon_sub08.png" alt="" /></p>
+                            <p><img src="../img/sub/icon_sub08.png" alt="" /></p>
                             <p>다양한 어플리케이션 개발 및 활용</p>
                         </li>
                         <li>
-                            <p><img src="img/sub/icon_sub09.png" alt="" /></p>
+                            <p><img src="../img/sub/icon_sub09.png" alt="" /></p>
                             <p>쉽게 활용할 수 있는 관광정보 제공</p>
                         </li>
                         <li>
-                            <p><img src="img/sub/icon_sub10.png" alt="" /></p>
+                            <p><img src="../img/sub/icon_sub10.png" alt="" /></p>
                             <p>원하는 형태로 관광정보 다운로드 제공</p>
                         </li>
                         <li>
-                            <p><img src="img/sub/icon_sub11.png" alt="" /></p>
+                            <p><img src="../img/sub/icon_sub11.png" alt="" /></p>
                             <p>API 다운로드</p>
                             <div>
                                 <p>TourAPI <span>3.0</span></p>
@@ -173,12 +169,6 @@
                 </div>
             </div>
             <div class="con con_03" id="con_03">
-                <div class="top">부채 내용</div>
-                <ul>
-                    <li><a href="#con_01">정보공개제도 안내</a></li>
-                    <li><a href="#con_02">공공데이터 개방</a></li>
-                    <li><a href="#con_03">부채 내용</a></li>
-                </ul>
                 <div class="main">
                     <ul>
                         <li>
@@ -360,5 +350,7 @@
                 </div>
             </div>
         </footer>
+
+        <script src="../javascript/sub_01.js"></script>
     </body>
 </html>
