--- a/1001_Site_Renewal/리뉴얼/html/sub_05_01.html
+++ b/1001_Site_Renewal/리뉴얼/html/sub_05_01.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="header_box">
-                <a href="../main/index.html"><img src="../img/logo.png" alt="한국관광공사"/></a>
+                <a href="index.html"><img src="../img/logo.png" alt="한국관광공사"/></a>
                 <nav>
                     <ul class="header_1depth">
                         <li>
