--- a/011_javascript/if.html
+++ b/011_javascript/if.html
@@ -7,55 +7,19 @@
     </head>
     <body>
         <script>
-            document.write("<h1>if(조건문)</h1>");
+            document.write("<h1>ex01-if 조건문 활용</h1>");
+            //스스로 생각하기!!!!!
 
-            var a = 40,
-                b = 100,
-                avg = a + b / 2,
-                grap;
+            var a = prompt("내가 좋아하는 영화는 무엇일까요?");
 
-            if (avg >= 60) {
-                if (a >= 40 && b >= 40) {
-                    grap = "합격";
-                } else {
-                    grap = "불합격";
-                }
+            if (a === "Inception") {
+                alert("드디어 정답입니다. 축하합니다.");
+            } else if (a === "인셉션") {
+                alert("아쉽게 틀렸습니다. 하지만 영어로 입력한다면 정답입니다.");
+            } else if (a === "inception") {
+                alert("또 아쉽게 틀렸습니다. 첫 단어를 대문자로 입력한다면 Real정답입니다.");
             } else {
-                grap = "불합격";
-            }
-
-            document.write(grap);
-
-            if (avg >= 90) {
-                grap = "A";
-            } else if (avg >= 80) {
-                grap = "B";
-            } else if (avg >= 70) {
-                grap = "C";
-            } else if (avg >= 60) {
-                grap = "D";
-            } else if (avg >= 50) {
-                grap = "E";
-            }
-
-            document.write("<br> 평균" + avg + "점 " + grap + "등급");
-
-            var a = prompt("국어점수는 몇점인가요?"),
-                b = prompt("영어점수는 몇점인가요?"),
-                c = prompt("이름이 무엇인가요?");
-            (a = parseInt(a)), (b = parseInt(b));
-
-            document.write("<h1>Prompt</h1>");
-
-            // 1. prompt를 이용하여 이름을 받는다.
-            // 2. 받은 이름이 홍길동이라면 점수를 보여준다.
-
-            if (c === "홍길동") {
-                document.write("<br> 국어:" + a + "점 / 영어:" + b + "점"); // Number(a) a를 문자열을 숫자로 변환,
-                document.write("<br> 총점:" + (a + b) + "점 / 평균:" + (a + b) / 2 + "점"); // parseInt(a) a의 뒤에오는 문자열은 버리고 숫자만 가져온다.
-            } else {
-                alert("홍길동이 아닙니다.");
-                document.write("<br> 공부하세요");
+                alert("틀렸습니다. 힌트 : 크리스토퍼 놀란 감독의 명작 중 하나입니다.");
             }
         </script>
     </body>
