--- a/1001_Site_Renewal/리뉴얼/html/sub_01.html
+++ b/1001_Site_Renewal/리뉴얼/html/sub_01.html
@@ -61,15 +61,15 @@
                 </div>
             </div>
         </header>
-        <div class="title_box">
-            <div class="top" id="title">정보공개제도 안내</div>
+        <div class="title" id="title">
+            <p>정보공개제도 안내</p>
+        </div>
+        <div class="content">
             <ul>
                 <li><a href="#con_01" id="con_01">정보공개제도 안내</a></li>
                 <li><a href="#con_02" id="con_02">공공데이터 개방</a></li>
                 <li><a href="#con_03" id="con_03">부채 내용</a></li>
             </ul>
-        </div>
-        <div class="content">
             <div class="con con_01" id="con_01">
                 <div class="main">
                     <div class="main_top">
