--- a/011_javascript/while2.html
+++ b/011_javascript/while2.html
@@ -8,17 +8,18 @@
     <body>
         <script>
             //while
-            document.write("<h1>while 1~100짝수의 합을 구하라</h1>");
+            document.write("<h1>while 1~100까지의 홀수의 개수를 구하라</h1>");
 
             var num = 0,
-                sum = null;
+                hole = 0;
             while (num <= 100) {
-                if (num % 2 === 0) {
-                    sum += num;
+                if (num % 2 === 1) {
+                    hole++;
+                    console.log(hole);
                 }
                 num++;
             }
-            document.write(sum + "<br>");
+            document.write(hole);
         </script>
     </body>
 </html>
