--- a/011_javascript/while3.html
+++ b/011_javascript/while3.html
@@ -8,13 +8,16 @@
     <body>
         <script>
             //while
-            document.write("<h1>while 뒷자리가 3,6,9 인것들만 구하라</h1>");
+            document.write("<h1>while 구하라</h1>");
 
-            var num = 0;
-            var num2 = [3, 6, 9];
+            var num = 1;
             while (num <= 100) {
-                if (num % 10 === 3 || num % 10 === 6 || num % 10 === 9) {
-                    document.write("<br>" + num);
+                if (num % 2 === 1) {
+                    document.write(num + " / ");
+                } else if (num === 100) {
+                    document.write("*");
+                } else {
+                    document.write("* / ");
                 }
                 num++;
             }
